:technologist: feat: improve development experience

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Interest Protocol",
+  "name": "Interest Protocol Landing Page",
   "icons": [
     {
       "src": "favicon.ico",
