--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@lottiefiles/react-lottie-player": "^3.4.2",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
