--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-spring": "^9.4.3",
     "styled-system": "^5.1.5",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
