--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-modal": "^3.14.4",
     "react-spring": "^9.4.3",
     "styled-system": "^5.1.5",
