:recycle: chore: replace mailchimp to getresponse

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["chimpy", "mailchimp", "msapplication", "preconnect", "XXXL"]
+  "cSpell.words": [
+    "chimpy",
+    "getresponse",
+    "mailchimp",
+    "msapplication",
+    "preconnect",
+    "XXXL"
+  ]
 }
