--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "scripts": {
     "prepare": "husky install",
     "dev": "next dev",
+    "test": "jest",
     "build": "next build",
     "start": "next start",
     "format": "prettier --write **/*.{js,ts,tsx}",
@@ -86,7 +87,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@typechain/ethers-v5": "^10.0.0",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.13",
     "@types/node": "^12.0.0",
     "@types/ramda": "^0.28.11",
     "@types/react": "^17.0.0",
@@ -98,6 +99,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-jest": "^28.1.0",
     "babel-plugin-ramda": "^2.0.0",
     "commitlint-config-gitmoji": "^2.2.5",
     "eslint": "^7.26.0",
@@ -110,6 +112,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^6.0.0",
+    "jest": "^26.4.2",
     "lint-staged": ">=10",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
