--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.1",
     "react-hot-toast": "^2.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.0.3",
     "react-modal": "^3.14.4",
     "react-redux": "^8.0.1",
@@ -92,6 +93,7 @@
     "@types/ramda": "^0.28.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-modal": "^3.13.1",
     "@types/redux-logger": "^3.0.9",
     "@types/styled-system": "^5.1.11",
