--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-plugin-styled-components": "^2.0.7",
     "commitlint-config-gitmoji": "^2.2.5",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
