--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.8",
     "@mysten/sui.js": "^0.20.0",
+    "@mysten/wallet-kit": "^0.1.2",
     "@vercel/analytics": "^0.1.5",
     "bignumber.js": "^9.1.1",
     "decimal.js-light": "^2.5.1",
@@ -23,8 +24,8 @@
     "next-intl": "^2.7.4",
     "next-progress": "^2.0.1",
     "ramda": "^0.28.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
     "react-hook-form": "^7.28.1",
     "react-hot-toast": "^2.2.0",
