--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@vercel/analytics": "^0.1.5",
     "bignumber.js": "^9.1.1",
     "decimal.js-light": "^2.5.1",
-    "next": "^12.2.0",
+    "next": "12.2.0",
     "next-intl": "^2.7.4",
     "next-progress": "^2.0.1",
     "ramda": "^0.28.0",
