:construction: feat: adding loader and remove other codes

--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga4": "^1.4.1",
     "react-hook-form": "^7.28.1",
     "react-hot-toast": "^2.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.0.3",
     "react-modal": "^3.14.4",
     "react-spring": "^9.5.0",
