--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.13",
+    "@types/lossless-json": "^1.0.1",
     "@types/node": "^12.0.0",
     "@types/ramda": "^0.28.11",
     "@types/react": "^17.0.0",
