refactor: clear dex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "conetar",
     "Cripto",
     "DAISVG",
+    "DEVNET",
     "dinero",
     "ETHERC",
     "EURSVG",
@@ -41,6 +42,7 @@
     "USDP",
     "USDS",
     "USDSVG",
+    "USDTSVG",
     "USTC",
     "VUSDC",
     "wagmi",
