chore: redeploy dex contracts for devnet 0.22.0

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "keywords": [
     "DeFi",
     "smart contracts",
-    "ethereum",
+    "sui",
     "web3",
-    "interest protocol"
+    "interest protocol",
+    "move"
   ],
   "version": "0.1.0",
   "private": false,
