--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "next-api-middleware": "^2.0.1",
     "next-intl": "^2.7.4",
     "next-progress": "^2.2.0",
-    "ramda": "^0.28.0",
+    "ramda": "0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.28.1",
@@ -84,7 +84,7 @@
     "@types/jest": "^26.0.13",
     "@types/lossless-json": "^1.0.1",
     "@types/node": "^12.0.0",
-    "@types/ramda": "^0.28.11",
+    "@types/ramda": "^0.28.23",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^17.0.0",
     "@types/react-infinite-scroller": "^1.2.3",
