--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mysten/sui.js": "^0.30.0",
     "@mysten/wallet-kit": "^0.4.0",
     "@stylin.js/react": "^1.0.1",
+    "@suins/toolkit": "^1.2.1",
     "@vercel/analytics": "^0.1.5",
     "bignumber.js": "^9.1.1",
     "decimal.js-light": "^2.5.1",
