--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,8 @@
       "@/constants": ["./constants"],
       "@/constants/*": ["./constants/*"],
       "@/interface": ["./interface"],
-      "@/sdk": ["./sdk"],
-      "@/sdk/*": ["./sdk/*"],
+      "@/lib": ["./lib"],
+      "@/lib/*": ["./lib/*"],
       "@/hooks": ["./hooks"],
       "@/hooks/*": ["./hooks/*"],
       "@/utils": ["./utils"],
