--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.8.8",
-    "@mysten/sui.js": "^0.32.0",
-    "@mysten/wallet-kit": "^0.4.2",
+    "@interest-protocol/sui-sdk": "^0.6.1",
+    "@mysten/sui.js": "^0.32.1",
+    "@mysten/wallet-kit": "^0.4.3",
     "@stylin.js/react": "^1.0.1",
     "@suins/toolkit": "^1.2.1",
     "@vercel/analytics": "^0.1.5",
